--- a/DockerFile
+++ b/DockerFile
@@ -3,4 +3,5 @@
 FROM ubuntu:14.04
 MAINTAINER CharuLata<sundaramgupta6@gmail.com>
 
-RUN apt-get update && apt-get install curl\htop -y
+RUN apt-get update && apt-get install curl \
+      htop -y
